<resources>
    <string name="app_name">Quiz_Android</string>
    <string name="radiobutton">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="radiobutton4">RadioButton</string>
    <string name="verificar1">Verificar</string>
    <string name="imatge">TODO</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="logo">TODO</string>
    <string name="medium">Medium</string>
    <string name="start">Start</string>
</resources>