<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D0B22">

    <Button
        android:id="@+id/easyMode"
        android:layout_width="106dp"
        android:layout_height="64dp"
        android:backgroundTint="#11CD88"
        android:text="@string/easy"
        android:textColor="#000000"
        tools:ignore="VisualLintButtonSize"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="384dp" />

    <Button
        android:id="@+id/hardMode"
        android:layout_width="106dp"
        android:layout_height="62dp"
        android:backgroundTint="#E8107C"
        android:text="@string/hard"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="488dp" />

    <Button
        android:id="@+id/mediumMode"
        android:layout_width="106dp"
        android:layout_height="62dp"
        android:backgroundTint="#FDB21A"
        android:text="@string/medium"
        android:textColor="#000000"
        tools:ignore="VisualLintButtonSize"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="385dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="344dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/quizlogo"
        tools:layout_editor_absoluteX="11dp" />

</androidx.constraintlayout.widget.ConstraintLayout>